--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ composeBom = "2024.04.01"
 nav = "2.8.9"
 material3 = "1.3.2"
 icon = "1.5.4"
+room_version = "2.7.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -30,6 +31,7 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3",
 androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "nav"}
 androidx-navigation-compose = {group = "androidx.navigation", name="navigation-compose", version.ref = "nav"}
 androidx-compose-material-icons = {group = "androidx.compose.material", name="material-icons-extended",version.ref = "icon"}
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
